--- a/RecipeWorld/RecipeWorld/RecipeWorld.csproj
+++ b/RecipeWorld/RecipeWorld/RecipeWorld.csproj
@@ -213,6 +213,7 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModel\RecipeFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -280,11 +281,11 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Recipe\Index.cshtml" />
     <Content Include="Views\ReadRecipe\Index.cshtml" />
+    <Content Include="Views\WriteRecipe\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\UpdateRecipe\" />
-    <Folder Include="Views\WriteRecipe\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
