--- a/RecipeWorld/RecipeWorld/RecipeWorld.csproj
+++ b/RecipeWorld/RecipeWorld/RecipeWorld.csproj
@@ -213,7 +213,7 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModel\RecipeFormViewModel.cs" />
+    <Compile Include="ViewModels\RecipeFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
