--- a/RecipeWorld/RecipeWorld/RecipeWorld.csproj
+++ b/RecipeWorld/RecipeWorld/RecipeWorld.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\ReadRecipeController.cs" />
     <Compile Include="Controllers\RecipeController.cs" />
+    <Compile Include="Controllers\RecipeFileController.cs" />
     <Compile Include="Controllers\UpdateRecipeController.cs" />
     <Compile Include="Controllers\WriteRecipeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -216,15 +217,18 @@
     <Compile Include="Models\RecipeFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\RecipeFileViewModel.cs" />
     <Compile Include="ViewModels\RecipeFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-sandstone.css" />
     <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\bootstrap.min-sandstone.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
+    <Content Include="Content\site.css" />
     <Content Include="Images\pencil2.gif" />
     <Content Include="RecipeImageFiles\1_1.jpg" />
     <Content Include="RecipeImageFiles\2_1.jpg" />
@@ -288,6 +292,8 @@
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Shared\_Footer.cshtml" />
     <Content Include="Views\Shared\_NavBarSandStone.cshtml" />
+    <Content Include="Views\RecipeFile\Index.cshtml" />
+    <Content Include="Views\RecipeFile\Read.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
