--- a/RecipeWorld/RecipeWorld/RecipeWorld.csproj
+++ b/RecipeWorld/RecipeWorld/RecipeWorld.csproj
@@ -288,6 +288,7 @@
     <Content Include="Views\Shared\_Footer.cshtml" />
     <Content Include="Views\Shared\_NavBarSandStone.cshtml" />
     <Content Include="Views\Recipe\New.cshtml" />
+    <Content Include="Views\Recipe\Read.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
